--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/phoenix": "^1.4.4",
     "core-js": "^3.6.5",
+    "phoenix": "^1.5.3",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
@@ -63,6 +65,12 @@
         ],
         "env": {
           "jest": true
+        }
+      },
+      {
+        "files": ["**/*"],
+        "rules": {
+          "@typescript-eslint/no-unused-vars": ["warn", { "args": "all", "argsIgnorePattern": "^_" }]
         }
       }
     ]
