Starts to work again

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,7 +79,8 @@
               "args": "all",
               "argsIgnorePattern": "^_"
             }
-          ]
+          ],
+          "quote-props": ["error", "consistent"]
         }
       }
     ]
