--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
+    "fp-ts": "^2.7.0",
+    "io-ts": "^2.2.9",
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
@@ -80,7 +82,10 @@
               "argsIgnorePattern": "^_"
             }
           ],
-          "quote-props": ["error", "consistent"]
+          "quote-props": [
+            "error",
+            "consistent"
+          ]
         }
       }
     ]
